<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_open_orders"
        android:icon="@drawable/ic_folder_black_24dp"
        android:title="@string/title_open_orders" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_account" />





</menu>
