<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_item_person"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:layoutDirection="rtl"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout_prefix"
            android:layout_width="20dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/rect_rounded_red"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/relativeLayout_prefix"
            >
        <TextView
            android:id="@+id/textView_phone_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            tools:text="@string/phone_type" />

        <TextView
            android:id="@+id/textView_problem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_phone_type"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            tools:text="@string/phone_problem_title" />

        <TextView
            android:id="@+id/textView_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_phone_type"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorPrimaryDark"
            tools:text="@string/order_new" />




        <ImageView
            android:id="@+id/imageView_rating"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            tools:src="@drawable/ic_star_24dp" />

        <ImageView
            android:id="@+id/imageView_rating_2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toStartOf="@id/imageView_rating"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            tools:src="@drawable/ic_star_24dp" />

        <ImageView
            android:id="@+id/imageView_rating_3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toStartOf="@id/imageView_rating_2"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            tools:src="@drawable/ic_star_24dp" />

        <ImageView
            android:id="@+id/imageView_rating_4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toStartOf="@id/imageView_rating_3"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            tools:src="@drawable/ic_star_24dp" />

        <ImageView
            android:id="@+id/imageView_rating_5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toStartOf="@id/imageView_rating_4"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            tools:src="@drawable/ic_star_24dp" />

        </RelativeLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>